# rocket-ui

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  conanfile.txt  format.json  main.cpp  read_serial.py  run.bat
.github/workflows/: windows.yml
rpi/: main.py  sample_data_trimmed.csv
src/: SerialReader.hpp  main.cpp
